--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 /*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
 @import "node_modules/jquery-ui-dist/jquery-ui.css";
 @import "node_modules/simplebar/src/simplebar.css";
+@import "node_modules/tippy.js/index.css";
 @keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -12827,6 +12828,36 @@ html, body {
   opacity: 0.8;
 }
 
+.tippy-tooltip {
+  background-color: #4E5D6C;
+  padding: 4px;
+}
+
+.tippy-popper[x-placement^=left] .tippy-arrow {
+  border-left-color: #4E5D6C;
+}
+
+.tippy-popper[x-placement^=right] .tippy-arrow {
+  border-right-color: #4E5D6C;
+}
+
+.tippy-content .block-controls {
+  display: flex;
+  flex-direction: column;
+}
+.tippy-content .button {
+  padding: 0;
+  width: 32px;
+  height: 32px;
+  border-radius: 0.25rem;
+}
+.tippy-content .button + .button {
+  margin-top: 8px;
+}
+.tippy-content .fa, .tippy-content .panel.deck .panel-tabs a::before, .panel.deck .panel-tabs .tippy-content a::before {
+  font-size: 1.5rem;
+}
+
 .navbar.top {
   padding: 4px 4px 0;
   min-height: 50px;
@@ -12929,6 +12960,11 @@ html, body {
   border: 0;
   z-index: 1;
   user-select: none;
+  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.6) !important;
+}
+.main .sound-block:hover,
+.main .sound-block:focus {
+  box-shadow: inset 0 0 0 2px #4E5D6C !important;
 }
 
 .navbar.level {
