--- a/index.scss
+++ b/index.scss
@@ -27,6 +27,8 @@ $fa-font-path: "node_modules/fork-awesome/fonts";
 
 @import "node_modules/simplebar/src/simplebar.css";
 
+@import "node_modules/tippy.js/index.css";
+
 // ------------------ //
 //  Layout
 // ------------------ //
@@ -115,6 +117,45 @@ html, body {
 
 .simplebar-track .simplebar-scrollbar.simplebar-visible:before {
     opacity: 0.8;
+}
+
+// ------------------ //
+//  Tippy
+// ------------------ //
+
+.tippy-tooltip {
+    background-color: $grey;
+    padding: 4px;
+}
+
+.tippy-popper[x-placement^=left] .tippy-arrow {
+    border-left-color: $grey;
+}
+
+.tippy-popper[x-placement^=right] .tippy-arrow {
+    border-right-color: $grey;
+}
+
+.tippy-content {
+    .block-controls {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .button {
+        padding: 0;
+        width: 32px;
+        height: 32px;
+        border-radius: .25rem;
+    }
+
+    .button + .button {
+        margin-top: 8px;
+    }
+
+    .fa {
+        font-size: 1.5rem;
+    }
 }
 
 // ------------------ //
@@ -239,6 +280,12 @@ html, body {
         border: 0;
         z-index: 1;
         user-select: none;
+        box-shadow: inset 0 0 0 1px rgba($grey, 0.6) !important;
+    }
+
+    .sound-block:hover,
+    .sound-block:focus {
+        box-shadow: inset 0 0 0 2px $grey !important;
     }
 }
 
