--- a/index.scss
+++ b/index.scss
@@ -39,7 +39,7 @@ html, body {
 }
 
 .wrapper {
-    height: calc(100% - 50px);
+    height: calc(100% - 40px);
     position: relative;
     margin-right: 0;
     transition: margin-right 0.3s ease-in-out 0.2s;
@@ -176,14 +176,61 @@ html, body {
 }
 
 // ------------------ //
+//  Navbar General
+// ------------------ //
+
+.navbar {
+    display: flex !important;
+    align-items: stretch;
+}
+
+.navbar-item,
+.navbar-link {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-dropdown {
+    display: none;
+    font-size: 0.875rem;
+    left: 0;
+    min-width: 100%;
+    position: absolute;
+    z-index: 20;
+    padding: 0;
+    border-bottom: 0 !important;
+    border-radius: 6px 6px 0 0;
+    border-top: none;
+    bottom: 100%;
+    box-shadow: 0 -8px 8px rgba($black, 0.1);
+    top: auto;
+    background-color: $navbar-dropdown-background-color;
+}
+
+.navbar-item.has-dropdown {
+    align-items: stretch;
+}
+
+.navbar-item.is-hoverable:focus .navbar-dropdown,
+.navbar-item.is-hoverable:hover .navbar-dropdown {
+    display: block;
+}
+
+.navbar-item.has-dropdown-up .navbar-link::after {
+    transform: rotate(135deg) translate(0.25em, -0.25em);
+}
+
+// ------------------ //
 //  Navbar Top
 // ------------------ //
 
 .navbar.top {
-    padding: 4px 4px 0;
-    min-height: 50px;
-    height: 50px;
+    padding: 4px;
+    min-height: 40px;
+    height: 40px;
     user-select: none;
+    justify-content: space-between;
+    box-shadow: 0 1px 0 1px $border;
 }
 
 .navbar.top .navbar-brand {
@@ -197,14 +244,12 @@ html, body {
     }
 }
 
-.navbar.top .navbar-item {
+.navbar.top .about {
     & {
         font-size: $size-medium;
-    }
-
-    &.about {
         color: $success;
-        margin: 0 $size-medium;
+        flex-grow: 1;
+        justify-content: center;
     }
 
     i {
@@ -217,9 +262,10 @@ html, body {
     }
 }
 
-.navbar.top .navbar-end {
-    .navbar-item {
+.navbar.top .window {
+    & {
         padding: 0;
+        margin-right: -4px;
     }
 
     .buttons {
@@ -231,7 +277,7 @@ html, body {
         border: 0;
         opacity: 0.7;
         margin: 0 !important;
-        height: 50px;
+        height: 40px;
     }
 
     .button:hover {
@@ -240,6 +286,7 @@ html, body {
     }
 
     i {
+        font-size: $size-large;
         margin: 0;
     }
 }
@@ -255,6 +302,7 @@ html, body {
         background-image: linear-gradient($grey-dark 1px, transparent 1px),
         linear-gradient(90deg, $grey-dark 1px, transparent 1px);
         background-size: 10px 10px;
+        padding-bottom: 40px;
     }
 
     &.is-loading {
@@ -311,10 +359,11 @@ html, body {
 
 .navbar.level {
     & {
+        display: flex;
         position: absolute;
         right: 0;
         width: 100%;
-        height: 100px;
+        height: 140px;
         bottom: -100px;
         transition: bottom 0.5s;
         background-color: rgba($navbar-background-color, 0.95);
@@ -322,13 +371,90 @@ html, body {
         user-select: none;
     }
 
-    .button {
-        margin: 0 $size-small;
-        font-size: 1.2rem;
-    }
-
     .button .fa {
         margin-right: 0.5rem;
+    }
+}
+
+.level-center {
+    & {
+        width: 100%;
+    }
+
+    .level-top,
+    .level-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .level-top {
+        border-top: 2px solid $border;
+        border-bottom: 2px solid $border;
+    }
+
+    .level-bottom {
+        height: calc(100% - 40px);
+    }
+
+    .level-top,
+    .navbar-item {
+        font-size: 1.1rem;
+        height: 40px;
+    }
+
+    .navbar-dropdown .navbar-item {
+        padding: 0.5rem 1rem;
+    }
+
+    .navbar-item.has-dropdown,
+    .navbar-dropdown {
+        padding: 0;
+        border-bottom: 0 !important;
+    }
+
+    .navbar-link {
+        padding-right: 3rem;
+    }
+
+    i {
+        margin-right: 0.6rem;
+        font-size: 1.3rem;
+    }
+}
+
+.level-bottom {
+    .group {
+        display: flex;
+        align-items: center;
+    }
+
+    .text i {
+        display: block;
+        text-align: center;
+        font-size: 3rem;
+        margin-right: 0;
+    }
+
+    .buttons {
+        margin-left: 1rem;
+        margin-bottom: 0;
+    }
+
+    .add .buttons {
+        width: 250px;
+    }
+
+    .page .buttons {
+        width: 270px;
+    }
+
+    .button {
+        margin: 0.3rem;
+    }
+
+    .buttons .button {
+        margin-right: 0.3rem !important;
     }
 }
 
@@ -337,18 +463,18 @@ html, body {
     & {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
     }
 
     .button {
-        width: 48px;
-        height: 48px;
+        width: 40px;
+        height: 40px;
         margin: 0;
         border: 2px solid $border;
     }
 
     .button + .button {
-        margin-top: 2px;
+        margin-top: 30px;
     }
 
     .button .fa {
@@ -358,11 +484,6 @@ html, body {
 }
 
 .navbar .level-right {
-    & {
-        justify-content: flex-start;
-        margin-top: -48px;
-    }
-
     .button {
         border-right: 0;
     }
@@ -386,7 +507,7 @@ html, body {
 
 .has-right .navbar.level {
     .deck-toggle {
-        margin-top: -48px !important;
+        margin-top: -40px !important;
         color: $green !important;
     }
 }
@@ -399,8 +520,8 @@ html, body {
     & {
         position: absolute;
         width: 250px;
-        height: calc(100% - 50px);
-        top: 50px;
+        height: calc(100% - 40px);
+        top: 40px;
         right: -250px;
         transition: right 0.3s ease-in-out 0.2s;
         background-color: $grey-darker;
@@ -410,7 +531,9 @@ html, body {
 
     .panel-heading {
         & {
-            height: 50px;
+            height: 40px;
+            padding: 0.25em 0.5em;
+            text-align: center;
         }
 
         .count {
@@ -460,7 +583,7 @@ html, body {
 
     .deck-items {
         & {
-            height: calc(100% - 210px);
+            height: calc(100% - 200px);
         }
 
         .panel-block {
