--- a/index.css
+++ b/index.css
@@ -12780,14 +12780,15 @@ html, body {
 .sound-text {
   text-align: center;
   width: 100%;
-  padding: 4px 6px;
-  line-height: 21px;
+  padding: 2px;
+  line-height: 18px;
   z-index: 1;
   word-break: break-word;
 }
 .sound-text textarea {
   text-align: center;
   font-size: 1rem;
+  line-height: 18px;
   background: transparent;
   color: whitesmoke;
   resize: none;
@@ -13017,6 +13018,7 @@ html, body {
   border: 0;
   z-index: 1;
   user-select: none;
+  overflow: hidden;
   box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.7) !important;
 }
 .main .sound-block:hover,
@@ -13207,9 +13209,6 @@ html, body {
 }
 .panel.deck .deck-items .panel-block:first-child {
   border-top: 0;
-}
-.panel.deck .deck-items .sound-text {
-  text-align: left;
 }
 .panel.deck .batch {
   padding: 0;
