--- a/index.scss
+++ b/index.scss
@@ -64,8 +64,8 @@ html, body {
     & {
         text-align: center;
         width: 100%;
-        padding: 4px 6px;
-        line-height: 21px;
+        padding: 2px;
+        line-height: 18px;
         z-index: 1;
         word-break: break-word;
     }
@@ -73,6 +73,7 @@ html, body {
     textarea {
         text-align: center;
         font-size: 1rem;
+        line-height: 18px;
         background: transparent;
         color: $light;
         resize: none;
@@ -344,6 +345,7 @@ html, body {
         border: 0;
         z-index: 1;
         user-select: none;
+        overflow: hidden;
         box-shadow: inset 0 0 0 1px rgba($grey, 0.7) !important;
     }
 
@@ -596,10 +598,6 @@ html, body {
 
         .panel-block:first-child {
             border-top: 0;
-        }
-
-        .sound-text {
-            text-align: left;
         }
     }
 
