--- a/index.css
+++ b/index.css
@@ -12970,8 +12970,6 @@ html, body {
 .main {
   height: 100%;
   position: relative;
-  background-image: linear-gradient(#2B3E50 1px, transparent 1px), linear-gradient(90deg, #2B3E50 1px, transparent 1px);
-  background-size: 10px 10px;
   padding-bottom: 40px;
 }
 .main.is-loading:before {
@@ -13019,11 +13017,19 @@ html, body {
   z-index: 1;
   user-select: none;
   overflow: hidden;
-  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.7) !important;
+  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.2) !important;
 }
 .main .sound-block:hover,
 .main .sound-block:focus {
   box-shadow: inset 0 0 0 2px #4E5D6C !important;
+}
+
+.has-bottom .main {
+  background-image: linear-gradient(#2B3E50 1px, transparent 1px), linear-gradient(90deg, #2B3E50 1px, transparent 1px);
+  background-size: 10px 10px;
+}
+.has-bottom .main .sound-block {
+  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.6) !important;
 }
 
 .navbar.level {
