--- a/index.css
+++ b/index.css
@@ -13264,7 +13264,11 @@ textarea:focus {
   transition: right 0.3s ease-in-out 0.2s;
   border-left: 2px solid #4E5D6C;
 }
+.panel.deck .panel-tabs {
+  display: none;
+}
 .panel.deck .panel-tabs a {
+  display: inline-block;
   height: 30px;
   padding: 3px 15px 0;
   user-select: none;
