--- a/index.scss
+++ b/index.scss
@@ -66,7 +66,14 @@ textarea:focus {
     background: $background;
     width: 200px;
     padding: 0;
-    z-index: 100;
+    z-index: 3000;
+}
+
+.ui-draggable-dragging.panel-block.page {
+    padding: 0.25em 0.75em;
+    border-top: 1px solid $border;
+    border-bottom: 1px solid $border;
+    width: auto;
 }
 
 .notification {
