--- a/index.scss
+++ b/index.scss
@@ -671,6 +671,7 @@ textarea:focus {
 
     .panel-block {
         padding: 0.25em 0.75em;
+        user-select: none;
     }
 
     .panel-block:first-child {
