--- a/index.css
+++ b/index.css
@@ -13004,7 +13004,11 @@ textarea:focus {
 }
 .tabs.is-toggle .link {
   height: 35px;
-  padding: 0.5em 0.6em 0.5em 0.5em;
+  padding: 0.5em 0 0.5em 0.5em;
+}
+.tabs.is-toggle .icon:last-child {
+  padding: 0.3em 1em 0.3em 0.4em;
+  height: auto;
 }
 .tabs.is-toggle .link strong {
   letter-spacing: -1px;
@@ -13088,7 +13092,7 @@ textarea:focus {
   z-index: 1;
   user-select: none;
   overflow: hidden;
-  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.2) !important;
+  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.4) !important;
 }
 .main .sound-block:hover,
 .main .sound-block:focus {
@@ -13100,7 +13104,7 @@ textarea:focus {
   background-size: 10px 10px;
 }
 .has-bottom .main .sound-block {
-  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.6) !important;
+  box-shadow: inset 0 0 0 1px rgba(78, 93, 108, 0.8) !important;
 }
 
 .navbar.level {
